<resources>
    <string name="app_name">Time</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="clock_clock">CLOCK</string>
    <string name="clock_alarm_white">ALARM</string>
    <string name="clock_alarm_orange">ALARM</string>
    <string name="clock_settings_white">SETTINGS</string>
    <string name="clock_settings_orange">SETTINGS</string>
    <string name="title_activity_clock_sleep">ClockSleep</string>
    <string name="title_activity_clock_sleep_mode">ClockSleepMode</string>
    <string name="clock_theme">THEME</string>
    <string name="clock_theme_orange">THEME</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_snooze">Snooze</string>
    <string name="snooze_alarm">Alarm</string>
    <string name="snooze_stop_alarm">Tap and hold to stop alarm</string>
    <string name="snooze_snooze">SNOOZE</string>
    <string name="snooze_double_tap_to_snooze">Double tap to snooze</string>
    <string name="snooze_snoozed_for_10_minutes">Snoozed for 10 minutes</string>
    <string name="snooze_alarm_stopped">Alarm Stopped</string>
    <string name="title_activity_alarm_stopped">AlarmStopped</string>
    <string name="title_activity_alarm_snoozed">AlarmSnoozed</string>
    <string name="alarm_alarm">ALARM</string>
    <string name="title_activity_add_alarm">AddAlarm</string>
    <string name="add_alarm_hint">Title</string>
    <string name="add_alarm_text">ADD ALARM</string>
    <string name="alarm_no_more_alarms">No more alarms</string>
    <string name="title_activity_theme">Theme</string>
    <string name="theme_light">LIGHT</string>
    <string name="theme_dark">DARK</string>
    <string name="alarm_you_have_no_alarms">You have no alarms</string>
    <string name="settings_settings">SETTINGS</string>
    <string name="about_about">ABOUT</string>
</resources>
